RESOLVED FIXED67522
REGRESSION: Moving up doesn't work in some cases
https://bugs.webkit.org/show_bug.cgi?id=67522
Summary REGRESSION: Moving up doesn't work in some cases
Ryosuke Niwa
Reported 2011-09-02 14:09:23 PDT
In the attached url, the caret should appear on the second line, NOT on the first line. i.e. when moving upwards, WebKit not skips lines that are soft-wrapped.
Attachments
fixes the bug (4.04 KB, patch)
2011-09-12 15:02 PDT, Ryosuke Niwa
eric: review+
Ryosuke Niwa
Comment 1 2011-09-12 15:02:13 PDT
Created attachment 107089 [details] fixes the bug
Eric Seidel (no email)
Comment 2 2011-09-12 15:04:17 PDT
Comment on attachment 107089 [details] fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=107089&action=review > Source/WebCore/editing/visible_units.cpp:536 > + Position pos = n->hasTagName(brTag) ? positionBeforeNode(n) : createLegacyEditingPosition(n, caretMaxOffset(n)); Should this be a helper inline? Is this concept needed elsewhere?
Ryosuke Niwa
Comment 3 2011-09-12 15:07:33 PDT
Comment on attachment 107089 [details] fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=107089&action=review >> Source/WebCore/editing/visible_units.cpp:536 >> + Position pos = n->hasTagName(brTag) ? positionBeforeNode(n) : createLegacyEditingPosition(n, caretMaxOffset(n)); > > Should this be a helper inline? Is this concept needed elsewhere? Maybe. I think I need to clean up as a part of getting rid of createLegacyEditingPosition. This is a problem whenever we create positions using caretMinOffset/caretMaxOffset. There's a very interesting interactions between TextIterator and other iteration classes, visible_units, and VisiblePosition and caretMinOffset/caretMaxOffset so I've been postponing it for now.
Ryosuke Niwa
Comment 4 2011-09-12 16:31:03 PDT
Ryosuke Niwa
Comment 5 2011-09-12 16:32:03 PDT
Thanks for the review! landing it now.
Note You need to log in before you can comment on or make changes to this bug.