REGRESSION: Moving up doesn't work in some cases https://bugs.webkit.org/show_bug.cgi?id=67522

Reviewed by Eric Seidel.

Source/WebCore:

The bug was caused by previousLinePosition's attempting to obtain the last root line box using
a position at minCaretOffset (which is, in practice, located at the beginning of wrapped lines).

Fix the bug by calling maxCaretOffset instead. Because isCandidate returns false at (br, 1),
use the positionBeforeNode for br elements.

Test: editing/selection/move-up-into-wrapped-line.html

* editing/visible_units.cpp:
(WebCore::previousLinePosition):

LayoutTests:

Add a test to move caret upwards from an empty line below wrapped lines.

WebKit used to skip wrapped lines and placed caret at the beginning of the first of those wrapped lines
instead of before the last.

* editing/selection/move-up-into-wrapped-line-expected.txt: Added.
* editing/selection/move-up-into-wrapped-line.html: Added.


Canonical link: https://commits.webkit.org/83873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94988 268f45cc-cd09-0410-ab3c-d52691b4dbfc